<?xml version="1.0"?>
<package format="3">
    <name>foxglove_bridge</name>
    <version>0.8.5</version>
    <description>ROS Foxglove Bridge</description>
    <license>MIT</license>
    <url type="website">https://github.com/foxglove/ros-foxglove-bridge</url>
    <author email="ros-tooling+foxglove_bridge@foxglove.dev">Foxglove</author>
    <maintainer email="ros-tooling+foxglove_bridge@foxglove.dev">Foxglove</maintainer>

    <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>

    <!-- ROS 1 runtime dependencies -->
    <depend condition="$ROS_VERSION == 1">nodelet</depend>
    <depend condition="$ROS_VERSION == 1">ros_babel_fish</depend>
    <depend condition="$ROS_VERSION == 1">roscpp</depend>
    <depend condition="$ROS_VERSION == 1">roslib</depend>

    <!-- Test dependencies -->
    <test_depend condition="$ROS_VERSION == 1">gtest</test_depend>
    <test_depend condition="$ROS_VERSION == 1">rostest</test_depend>
    <test_depend condition="$ROS_VERSION == 1">rosunit</test_depend>
    <test_depend>std_msgs</test_depend>
    <test_depend>std_srvs</test_depend>

    <!-- Common dependencies -->
    <build_depend>asio</build_depend>
    <build_depend>libssl-dev</build_depend>
    <build_depend>libwebsocketpp-dev</build_depend>
    <build_depend>nlohmann-json-dev</build_depend>
    <build_depend>ros_environment</build_depend>
    <build_depend>zlib</build_depend>

    <exec_depend>openssl</exec_depend>
    <exec_depend>zlib</exec_depend>

    <depend>resource_retriever</depend>
    <depend>rosgraph_msgs</depend>

    <!-- The export tag contains other, unspecified, tags -->
    <export>
        <build_type condition="$ROS_VERSION == 1">catkin</build_type>
        <nodelet condition="$ROS_VERSION == 1" plugin="${prefix}/nodelets.xml" />
    </export>
</package>
